--- a/demo/nqueen/package.json
+++ b/demo/nqueen/package.json
@@ -4,7 +4,8 @@
   "description": "Demo for Redux-Worker",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "./node_modules/.bin/webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
@@ -24,6 +25,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "6.3.13",
     "babel-preset-react": "^6.5.0",
-    "webpack": "^1.12.14"
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
   }
 }
